--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
   "author": "Jakaria Blaine",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^6.2.0",
     "lite-server": "^2.6.1",
+    "node-sass": "^6.0.1",
+    "sass": "^1.39.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.2",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "cash-dom": "^8.1.0"
   }
 }
